# app-monitor

./: .gitignore  AGENTS.md  AppMonitor.spec  AppMonitorAdmin.spec  GLOSSARY.md  LICENSE.txt  REFACTORING_PLAN.md  TASKS.md  _build_installer.py  _check_db.py  _create_dist.py  _do_build.py  _download_nsis.py  _find_install_log.py  _gen_icon.py  _gen_icon_simple.py  _git_commit.py  _git_diff_stat.py  _git_status.py  _installer_main.py  add_autostart.py  add_core.py  add_files.py  add_mainwindow.py  add_notifier.py  add_reporter.py  add_scheduler.py  add_settings.py  build_all.py  build_exe.py  client_main.py  deploy.py  deploy_all.py  gen.py  gen_all.py  installer.nsi  main.py  out.txt  project_files.json  pyproject.toml  (+7 more)
api/: admin_server.py  schemas.py  server.py
client/: __init__.py  main.py  requirements.txt
core/: auth.py  autostart.py  database.py  limiter.py  logger.py  monitor.py  notifier.py  reporter.py  role_manager.py  scheduler.py  self_protect.py  updater.py  version.py
data/: app_monitor.db-shm  app_monitor.db-wal  cert.pem  key.pem  server_history.json
hooks/: check_single_instance.py
installer/: LICENSE_ANSI.txt  installer.nsi  installer.template.nsi  installer_nsi_fixed.txt
scripts/: build_all.py  build_exe.py  build_installer.bat  build_installer.ps1  build_setup.py  build_vue.py  check_admin_pwd.py  check_logs.py  check_nsi.py  check_password.py  check_pwd.py  check_spec.py  check_version.py  find_ft2font.py  find_mpl_extensions.py  find_pyexpat.py  fix_exec.py  fix_nsi.py  fix_nsi2.py  fix_nsi_encoding.py  fix_nsi_paths.py  git_commit.py  (+6 more)
(+81 files in other folders)
